# knowledge

./: .gitignore  README.md  package.json
.github/workflows/: windows-desktop.yml
backend/: pyinstaller.spec  pyproject.toml
backend/app/: __init__.py  ai.py  assistant.py  config.py  crawler.py  database.py  defaults.py  discovery.py  local_server.py  main.py  models.py  portable.py  pydantic_compat.py  repositories.py  run_control.py  schemas.py  secrets.py  services.py
backend/tests/: test_ai.py  test_api.py  test_crawler.py  test_discovery.py  test_health.py  test_local_server.py  test_portable.py  test_pydantic_compat.py  test_repository.py  test_service.py
desktop/: package-lock.json  package.json  tsconfig.json
desktop/src/: backend.test.ts  backend.ts  main.ts  preload.ts
docs/superpowers/plans/: 2026-07-04-ai-learning-knowledge-graph-implementation-plan.md  2026-07-05-graph-workbench-ai-assistant-implementation-plan.md  2026-07-05-standalone-desktop-android-packaging-implementation-plan.md
docs/superpowers/specs/: 2026-07-04-ai-learning-knowledge-graph-design.md  2026-07-04-knowledge-base-isolation-navigation-design.md  2026-07-05-graph-workbench-ai-assistant-design.md  2026-07-05-learning-preferences-approval-design.md  (+1 more)
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/android/: build.gradle
frontend/src/: App.test.tsx  App.tsx  api.ts  graphUtils.test.ts  graphUtils.ts  platform.test.ts  platform.ts  styles.css
scripts/: run-python-module.mjs  verify-packaging.sh
(+4 files in other folders)
